<resources>
    <string name="app_name">Baking Time</string>
    <string name="title_activity_recipe">Baking Time</string>
    <string name="title_activity_step">StepActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="introduction">Introduction</string>
    <string name="title_activity_step_detail">StepDetailActivity</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="recipe_image">Recipe image</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="message_network_unavailable">Network is unavailable</string>
    <string name="message_video_cannot_played">Video cannot be played</string>
    <string name="message_content_cannot_loaded">Content cannot be loaded, please check internet connection</string>
    <string name="message_recipe_detail_cannot_loaded">Recipe detail cannot be loaded, please check internet connection</string>
    <string name="message_step_detail_cannot_loaded">Step detail cannot be loaded, please check internet connection</string>

    <string name="title_activity_widget_settings">Widget Setup</string>


    <string name="pref_label_recipe_title">Choose a recipe for widget</string>
    <string name="pref_label_recipe_dialog_title">Choose a recipe</string>

    <string name="pref_recipe_id_key">pref_recipe_id</string>

    <string name="pref_screen_title_widget_setup">Widget Config</string>
    <string name="content_description_video_placeholder">Video placeholder</string>
    <string name="content_description_thumbnail">Thumbnail</string>
    <string name="content_description_step_has_video_or_not">Has video or not</string>

    <string name="test_cheesecake">Cheesecake</string>


</resources>
