...
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                >


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_ingredient_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_normal"
                    >


...
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                >


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_step_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_normal"
                    >


...
