...
            android:textColor="@color/colorPrimary"
            app:layout_gravity="right"
            />


        <Button
            android:id="@+id/btn_next"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/space_normal"
            android:layout_marginEnd="@dimen/space_normal"
            android:text="@string/next"
...
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            >


            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/video_player_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />


...
