<!-- TODO: Update blank fragment layout -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
    >

    <include layout="@layout/layout_error_content_not_loaded" android:id="@+id/layout_error_cannot_load_recipes"/>
    <android.support.v7.widget.RecyclerView

        android:id="@+id/recycler_recipe_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:paddingEnd="@dimen/space_tiny"
        android:paddingStart="@dimen/space_tiny"
        android:visibility="invisible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.github.alexpfx.udacity.nanodegree.android.baking_app.recipe.ui.list.RecipeListFragment"

        >
    </android.support.v7.widget.RecyclerView>


</FrameLayout>